[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Menu Scenes/Main_Menu_Teacher/SummaryReport.gd" type="Script" id=1]
[ext_resource path="res://Resources/fonts/arcade_40.tres" type="DynamicFont" id=2]
[ext_resource path="res://Resources/fonts/joystix_28.tres" type="DynamicFont" id=3]
[ext_resource path="res://Resources/Button Styles/main_menu_button_pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://Resources/Button Styles/main_menu_button_hover.tres" type="StyleBox" id=5]
[ext_resource path="res://Resources/Button Styles/main_menu_button_normal.tres" type="StyleBox" id=6]
[ext_resource path="res://Resources/Main GUI Images/BG/BG4.jpg.png" type="Texture" id=7]
[ext_resource path="res://Resources/Button Styles/window_dialog_hover.tres" type="StyleBox" id=8]
[ext_resource path="res://Resources/Button Styles/window_dialog_normal.tres" type="StyleBox" id=9]
[ext_resource path="res://Resources/Button Styles/window_dialog_pressed.tres" type="StyleBox" id=10]
[ext_resource path="res://Resources/window_dialog_maroon.tres" type="StyleBox" id=11]
[ext_resource path="res://Resources/fonts/chary_40.tres" type="DynamicFont" id=12]
[ext_resource path="res://Resources/fonts/chary_28_dialog_title.tres" type="DynamicFont" id=13]

[node name="Generate Report" type="Control"]
anchor_left = -0.00117054
anchor_top = 0.00262188
anchor_right = 0.998829
anchor_bottom = 1.00262
margin_left = 1.25995
margin_top = 5.90589
margin_right = 1.26001
margin_bottom = 5.90588
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 644.3, 350.719 )
scale = Vector2( 1.02303, 1.04446 )
texture = ExtResource( 7 )

[node name="GR_gobackBtn" type="Button" parent="."]
anchor_left = 0.536
anchor_top = 0.5
anchor_right = 0.536
anchor_bottom = 0.5
margin_left = -173.9
margin_top = 268.384
margin_right = 50.0999
margin_bottom = 337.384
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_pressed = Color( 1, 0.662745, 0.635294, 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -498.0
margin_right = 506.0
margin_bottom = 626.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1004.0
margin_bottom = 41.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 154.0
margin_right = 849.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
text = "Generate  Summary  Report   Selection"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 1004.0
margin_bottom = 95.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GR_selectW1Btn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 429.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_pressed = Color( 1, 0.662745, 0.635294, 1 )
text = " Requirement Analysis "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GR_selectW2Btn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 449.0
margin_right = 878.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_pressed = Color( 1, 0.662745, 0.635294, 1 )
text = "Requirement Elicitaion"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wSelectedLbl" type="Label" parent="VBoxContainer"]
margin_top = 99.0
margin_right = 1004.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
text = "
"
align = 1
valign = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 188.0
margin_right = 1004.0
margin_bottom = 259.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_right = 500.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
text = "NAME
-------------------"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 504.0
margin_right = 1004.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
text = "score
-------------------"
align = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 263.0
margin_right = 1004.0
margin_bottom = 588.0
rect_min_size = Vector2( 0, 325 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1004.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="nameLbl" type="Label" parent="VBoxContainer/ScrollContainer/HBoxContainer3"]
margin_right = 500.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )

[node name="scoreLbl" type="Label" parent="VBoxContainer/ScrollContainer/HBoxContainer3"]
margin_left = 504.0
margin_right = 1004.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
align = 2

[node name="avgScoreLbl" type="Label" parent="VBoxContainer"]
margin_top = 592.0
margin_right = 1004.0
margin_bottom = 626.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmGR" type="ConfirmationDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -207.5
margin_top = -71.0
margin_right = 207.5
margin_bottom = 71.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 420.0
margin_top = 250.0
margin_right = -359.999
margin_bottom = -189.999
custom_fonts/title_font = ExtResource( 13 )
window_title = "PLEASE CONFIRM..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 11 )

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_right = -18.0
margin_bottom = -19.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogLabel" type="Label" parent="WindowDialog/VBoxContainer"]
margin_top = 84.0
margin_right = 464.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="WindowDialog/VBoxContainer"]
margin_top = 212.0
margin_right = 464.0
margin_bottom = 261.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="CancelButton" type="Button" parent="WindowDialog/VBoxContainer/HBoxContainer"]
margin_right = 222.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.313726, 0.0470588, 0.156863, 1 )
custom_colors/font_color_pressed = Color( 0.25098, 0.14902, 0.0313726, 1 )
text = "Cancel"

[node name="ConfirmButton" type="Button" parent="WindowDialog/VBoxContainer/HBoxContainer"]
margin_left = 242.0
margin_right = 464.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.313726, 0.0470588, 0.156863, 1 )
custom_colors/font_color_pressed = Color( 0.25098, 0.14902, 0.0313726, 1 )
text = "Confirm"
[connection signal="pressed" from="GR_gobackBtn" to="." method="_on_GR_gobackBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GR_selectW1Btn" to="." method="_on_GR_selectW1Btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GR_selectW2Btn" to="." method="_on_GR_selectW2Btn_pressed"]
[connection signal="about_to_show" from="ConfirmGR" to="." method="_on_ConfirmationDialog_about_to_show"]
[connection signal="confirmed" from="ConfirmGR" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="WindowDialog/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="WindowDialog/VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
